<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/green"
    tools:context=".Pizzazia">

    <TextView
        android:id="@+id/pText"
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:background="#FAFAFA"
        android:text="@string/pizzazia"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold|italic"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/margherita"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/marg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pText"
        app:srcCompat="@drawable/margherita" />

    <ImageButton
        android:id="@+id/crudo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/crud"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/margherita"
        app:srcCompat="@drawable/crudo" />

    <ImageButton
        android:id="@+id/cheeseVeggie"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/cheeseVeggie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crudo"
        app:srcCompat="@drawable/cheese" />

    <ImageButton
        android:id="@+id/vegloaded"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/vegloaded"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cheeseVeggie"
        app:srcCompat="@drawable/vegloaded" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/name_margherita"
        android:textColor="#131212"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toEndOf="@+id/margherita"
        app:layout_constraintTop_toTopOf="@+id/margherita" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/price_margherita"
        android:textColor="#420606"
        android:textSize="14sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toEndOf="@+id/margherita"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/name_crudo"
        android:textColor="#131212"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toEndOf="@+id/crudo"
        app:layout_constraintTop_toTopOf="@+id/crudo" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/price_crudo"
        android:textColor="#420606"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toEndOf="@+id/crudo"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/cheese_veggie"
        android:textAllCaps="false"
        android:textColor="#131212"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toEndOf="@+id/cheeseVeggie"
        app:layout_constraintTop_toTopOf="@+id/cheeseVeggie" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/price_veggie"
        android:textColor="#420606"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toEndOf="@+id/cheeseVeggie"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/name_loaded"
        android:textColor="#131212"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toEndOf="@+id/vegloaded"
        app:layout_constraintTop_toTopOf="@+id/vegloaded" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/price_loaded"
        android:textColor="#420606"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toEndOf="@+id/vegloaded"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:text="@string/no_crudo"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintTop_toTopOf="@+id/button3" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:text="@string/no_cheeseveggie"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintTop_toTopOf="@+id/button5" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:text="@string/no_overloaded"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintTop_toTopOf="@+id/button7" />

    <Button
        android:id="@+id/button3"
        android:layout_width="30dp"
        android:layout_height="36dp"
        android:onClick="setDel_crudo"
        android:text="@string/remove_crudo"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <Button
        android:id="@+id/button4"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:onClick="setAdd_crudo"
        android:text="@string/add_crudo"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView10" />

    <Button
        android:id="@+id/button5"
        android:layout_width="30dp"
        android:layout_height="36dp"
        android:onClick="setDel_veggie"
        android:text="@string/remove_cheeseveggie"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView11"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <Button
        android:id="@+id/button6"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:onClick="setAdd_veggie"
        android:text="@string/add_cheeseveggie"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView11" />

    <Button
        android:id="@+id/button7"
        android:layout_width="30dp"
        android:layout_height="36dp"
        android:onClick="setDel_loaded"
        android:text="@string/remove_loaded"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView12"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <Button
        android:id="@+id/button8"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:onClick="setAdd_loaded"
        android:text="@string/add_loaded"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="setAdd_marg"
        android:text="@string/no_margherita"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintTop_toTopOf="@+id/button10" />

    <Button
        android:id="@+id/button9"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:onClick="setAdd_marg"
        android:text="@string/add_margherita"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView13" />

    <Button
        android:id="@+id/button10"
        android:layout_width="30dp"
        android:layout_height="36dp"
        android:onClick="setDel_marg"
        android:text="@string/remove_margherita"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView13"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/marg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/marg"
        android:textColor="#181717"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/margherita"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/crud"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/crud"
        android:textColor="#181717"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/crudo"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/chesseVeggie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/cheeseVeggie"
        android:textColor="#181717"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cheeseVeggie"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/vegloaded"
        android:textColor="#181717"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/vegloaded"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Button
        android:id="@+id/buttonPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="24dp"
        android:text="@string/buttonPayment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/cartValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="300dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:background="#D14B77"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonPayment" />

</androidx.constraintlayout.widget.ConstraintLayout>